Turned Carzain female

--- a/Characters/MortalCharacters.tex
+++ b/Characters/MortalCharacters.tex
@@ -3538,22 +3538,14 @@ She is a vampire, a monster, a boogey(wo)man used to frighten children.
 
 
 \section{\CarzainShachar}
-%\sectioncharlivelong{Carzain \Deracille{} \Shireyo}{\human}{\male}{Carzain}
+%\sectioncharlivelong{Carzain \Deracille{} \Shachar}{\human}{\male}{Carzain}
 \target{Carzain}
 %Male \human{} \birthtonow{Carzain}. 
 A Vaimon mage living in \Redglen{} in Pelidor. 
-His father is Nishain \Shireyo{} and his mother is \Roanne{} \Deracille. 
-He was taught magic by his parents. 
+Her father is Nishain \Shachar{} and her mother is \Roanne{} \Deracille. 
+She was taught magic by her parents. 
 
 Carzain is actually a Scion, an incarnation of the \Malach{} Ramiel. 
-
-\begin{description}
-  \item[Name:] {Carzain} son of {Nishain}. 
-  \item[Race:] Vaimon. 
-  \item[Appearance:] 
-    180 cm (tall for a Geican man but short for a Redcor), 70 kg. Well-muscled but slender. Carzain wears his black hair long and loose, but keeps his face clean-shaven. His features are delicate rather than rugged. He dresses preferably in black robes. His voice is a powerful and aggressive tenor. 
-  \item[Symbol:] He must have one too\prikker 
-\end{description}
 
 
 
@@ -3591,7 +3583,7 @@ The Ring of Eryx was an ensorcelled ring that \CarzainShachar stole from the aco
 \subsubsection[Taught by Weylon]{Taught by {\Weylon}}
 As a child, Carzain befriended \hr{Weylon}{\rah[\Weylon]}, an old retired Tiger knight. 
 
-\Weylon{} taught him to fight with swords. 
+\Weylon{} taught her to fight with swords. 
 So Carzain had learned from childhood how to fight. 
 This came in handy later. 
 
@@ -3601,29 +3593,29 @@ This came in handy later.
 
 \subsubsection{Before the Runger War}
 Carzain is not completely young and inexperienced in the Runger war. 
-He has been to war before. 
+She has been to war before. 
 
 The mutiny in Heropond happened several years earlier. 
-Back then, \hr{Carzain joins the army}{Carzain joined the army} because he hoped it would help him find out what was happening to him, who he was and who Vizicar was. 
+Back then, \hr{Carzain joins the army}{Carzain joined the army} because she hoped it would help her find out what was happening to her, who she was and who Vizicar was. 
 
-In the intermittent years, Carzain has \travelled the land as an adventurer, working his way towards \kenosis. 
-He has often worked as a mercenary or a bounty hunter, killing monsters for rewards from nobles and wealthy citizens. 
-Sometimes even helping those in need, if he feels like it. 
+In the intermittent years, Carzain has \travelled the land as an adventurer, working her way towards \kenosis. 
+She has often worked as a mercenary or a bounty hunter, killing monsters for rewards from nobles and wealthy citizens. 
+Sometimes even helping those in need, if she feels like it. 
 
-Several years later, Carzain heard the rumour that Runger was invading his homeland. 
-He discusses this with the voice in his head, and they decide to join the war. 
+Several years later, Carzain heard the rumour that Runger was invading her homeland. 
+She discusses this with the voice in her head, and they decide to join the war. 
 
 
 
 
 
 \subsubsection{Youth and frustration and adventuring}
-Throughout his youth Carzain was haunted by an undefinable frustration, a faceless dread, a hunger. 
-He longed for a purpose. 
-He felt that he was destined for gretaness, but he did not know how.
-He achieved many successes, but they all felt hollow. 
+Throughout her youth Carzain was haunted by an undefinable frustration, a faceless dread, a hunger. 
+She longed for a purpose. 
+She felt that she was destined for greatness, but she did not know how.
+She achieved many successes, but they all felt hollow. 
 
-Hence he roams around as an adventurer for 15 years (from age 20 to 35). 
+Hence she roams around as an adventurer for 15 years (from age 20 to 35). 
 
 
 
@@ -3631,7 +3623,7 @@ Hence he roams around as an adventurer for 15 years (from age 20 to 35).
 
 \subsubsection{\ZeethanKraal}
 Carzain met the \caisith sorcerer \hr{Zeethan Kraal}{\ZeethanKraal} and became his apprentice.
-Carzain would do tasks (quests) for Kraal, and in return Kraal would teach him sorcery and Arcana and Gnosis. 
+Carzain would do tasks (quests) for Kraal, and in return Kraal would teach her sorcery and Arcana and Gnosis. 
 
 
 
@@ -3639,7 +3631,7 @@ Carzain would do tasks (quests) for Kraal, and in return Kraal would teach him s
 
 \subsubsection{\Moongod mission}
 \ZeethanKraal sent Carzain on a quest.
-Here Carzain he encountered \hr{Glithid}{\glithids} and a dread \hr{Moongod}{\moongod}. 
+Here Carzain encountered \hr{Glithid}{\glithids} and a dread \hr{Moongod}{\moongod}. 
 
 Kraal told Carzain that \hr{Moongods on Miith and on Visha}{the \moongods did not look on \Miith like they did on Visha}. 
 
@@ -3649,7 +3641,7 @@ Carzain confronted Kraal with this.
 
 \begin{prose}
   Kraal: 
-    \quo{
+    \quo{%
       Oh, was there a town there?
       Hm.
       It was not there last time I checked.
@@ -3661,14 +3653,14 @@ Mortal lives meant little to Kraal.
 
 When Carzain saw the \moongod, everything was a shapeless chaos.
 Nothing made sense.
-He could not find head or tail in anything. 
+She could not find head or tail in anything. 
 The \moongod was enormous, sickly white in colour. 
-That much he knew.
-But he could not comprehend its form. 
+That much she knew.
+But she could not comprehend its form. 
 It was like a tree\dash no, like a giant humanoid without arms\dash no, like the moon of Visha itself\dash no, all three at once and yet none of them. 
 
 The \glithids were a horde of separate living creatures, and yet they were all part of the \moongod\dash or they were a part of the forest floor, the background upon which the god danced. 
-At times Carzain felt as if he himself were one of the dancers\dash as if he were \emph{one with} the dancers. 
+At times Carzain felt as if she herself were one of the dancers\dash as if she were \emph{one with} the dancers. 
 
 This was because the Shroud was so thin.
 The arcane ritual had temporarily weakened the Shroud. 
@@ -3684,16 +3676,14 @@ Only thus could the \moongod come to \Miith and dance.
 Carzain developed a rivalry with the sorceress \hs{Lumica}.
 This was a problem, for Lumica was a queen; her husband was \hs{Morn Ossan}, a king. 
 
-But Carzain called in favours with his old ally \hr{Zeethan Kraal}{\ZeethanKraal}.
-And he snuck into Lumica's tower and seduced her slave girl \hs{Taya}.
+But Carzain called in favours with her old ally \hr{Zeethan Kraal}{\ZeethanKraal}.
+And she snuck into Lumica's tower and seduced her slave girl \hs{Taya}.
 With their help, Carzain unearthed evidence that Lumica was plotting behind her husband's back.
-Thus Carzain was able to manipulate Morn Ossan and turn him against Lumica.
+Thus Carzain was able to manipulate Morn Ossan and turn her against Lumica.
 Eventually Carzain killed Lumica. 
 
 Then Carzain took up residence in Lumica's tower.
-This was what he wanted from the start. 
-As a bonus, he took Taya as his own slave. 
-She was happy to serve him.
+This was what she wanted from the start. 
 
 
 
@@ -3702,9 +3692,9 @@ She was happy to serve him.
 
 \subsubsection{Learned dark secrets}
 At the time of the \hs{Runger war}, Carzain had learned some \trope{CosmicHorror}{Cosmic Horror} revelations.
-Most of them were things from Vizicar's or Tydesmos's time which he had come to remember. 
+Most of them were things from Vizicar's or Tydesmos's time which she had come to remember. 
 
-Later he would learn many more. 
+Later she would learn many more. 
 
 
 
@@ -3718,7 +3708,7 @@ A party of heroes wanted to slay the evil acolytes of \hr{Llorgul}{\Llorgul} tha
 The acolytes kidnapped people and used them as sacrifices. 
 Everyone nearby feared them, for the acolytes had sorcery and unearthly allies. 
 
-\CarzainShachar joined the heroes because he coveted the ensorcelled \hs{Ring of Eryx} which the acolytes possessed.
+\CarzainShachar joined the heroes because she coveted the ensorcelled \hs{Ring of Eryx} which the acolytes possessed.
 The heroes all ended up dead, but Carzain escaped with the ring.
 
 
@@ -3728,29 +3718,29 @@ The heroes all ended up dead, but Carzain escaped with the ring.
 
 \subsubsection{Runger War}
 At the beginning of the Runger war, Carzain is already close to full \kenosis. 
-Maybe he \emph{has} achieved perfect \kenosis. 
-He is ready to grasp for \apotheosis{} now.
-Vizicar knows he is more than a \human, and he tells Carzain this. 
+Maybe she \emph{has} achieved perfect \kenosis. 
+She is ready to grasp for \apotheosis{} now.
+Vizicar knows they are more than a \human, and he tells Carzain this. 
 Vizicar wants to attain \kenosis{} and regain his body, power and memory. 
 Then he wants to achieve \apotheosis{} and learn his true nature.
-Then will he be a god. 
+Then will they be a god. 
 
-Carzain is in eastern Pelidor when he hears the news. 
-He decides to go do some scouting/reconnaisance before riding to the army. 
-So he heads further east and sniffs out the Rungeran army. 
-He finds a destroyed village and smells evil magic there. 
+Carzain is in eastern Pelidor when she hears the news. 
+She decides to go do some scouting/reconnaisance before riding to the army. 
+So she heads further east and sniffs out the Rungeran army. 
+She finds a destroyed village and smells evil magic there. 
 
-Then he goes into the forest, finds the army camp and spies on \Takestsha. 
-\emph{Maybe} she discovers him. 
-If so, he gets to show his badassitude as he fights his way out of it. 
+Then she goes into the forest, finds the army camp and spies on \hr{Takestsha}{\Takestsha}. 
+\emph{Maybe} Takestsha discovers Carzain. 
+If so, Carzain gets to show her badassitude as she fights her way out of it. 
 
 In these early Carzain chapters, have some references to the \hr{Myths of vanquished monsters}{myths of Iquinian heroes vanquishing inhuman Elder Races and monsters}. 
-Carzain gets \quo{Elder} feelings from the \EreshKali{} magic, just like Tantor did. 
+Carzain gets \quo{Elder} feelings from the \hr{Takestsha's Eresh-Kali magic}{\EreshKali{} magic}, just like \hr{Jirad Tantor}{Tantor} did. 
 Carzain and Vizicar are unsure of those myths and have a feeling that the Elder Races still live, and that humanoids do not dominate the world as much as they think they do. 
 
-Then he \hr{Carzain returns to Forklin}{goes to \Forclin} to meet Archibald Curwen and rejoin the army, bringing news with him. 
+Then she \hr{Carzain returns to Forklin}{goes to \Forclin} to meet \hs{Archibald Curwen} and rejoin the army, bringing news with her. 
 
-When Carzain dreams, he \hr{Satharioth dream of Ophidian eyes}{dreams of \ophidian eyes}. 
+When Carzain dreams, she \hr{Satharioth dream of Ophidian eyes}{dreams of \ophidian eyes}. 
 The eyes of \Nexagglachel. 
 Carzain vaguely remembers \hr{Nexagglachel's hatred}{\ps{\Nexagglachel} promise to destroy the \satharioth from the inside}. 
 
@@ -3768,7 +3758,7 @@ In fact, kill most of the thread.
 The Carzain/Vizicar story thread should be a teaser for things to come.
 It should not be the main story. 
 
-At the beginning of Carzain's part in \TwilightAngelRememberEmph, have several \emph{short} Vizicar scenes to clarify that he has attained \kenosis. 
+At the beginning of Carzain's part in \TwilightAngelRememberEmph, have several \emph{short} Vizicar scenes to clarify that she has attained \kenosis. 
 
 
 
@@ -3782,7 +3772,7 @@ Carzain remembered far more of Vizicar than either of them remembered of \Tydesm
 \Tydesmos was \hr{Tydesmos power}{a mighty and wise dark mage who possessed much Mythos knowledge}.
 Vizicar and Carzain both blocked these memories out because they were horrible. 
 
-In \emph{\CarzainWithRedcorBook{}}, Carzain \hr{Carzain remembers Tydesmos}{gradually regained his \Tydesmos memories}. 
+In \emph{\CarzainWithRedcorBook{}}, Carzain \hr{Carzain remembers Tydesmos}{gradually regained her \Tydesmos memories}. 
 
 
 
@@ -3792,13 +3782,34 @@ In \emph{\CarzainWithRedcorBook{}}, Carzain \hr{Carzain remembers Tydesmos}{grad
 \target{Ramiel crippled}
 \target{Carzain crippled}
 Carzain takes a serious wound in the battle of \Forclin and does not recover. 
-He is maimed.
-Everyone tells him he should rest and recuperate, but he keeps running around on adventures and using lots of magic. 
-The \qliphoth wear him down.
-His body becomes decrepit and infirm.
+She is maimed.
+Everyone tells her she should rest and recuperate, but she keeps running around on adventures and using lots of magic. 
+The \qliphoth wear her down.
+Her body becomes decrepit and infirm.
 
-He becomes more and more decrepit, all the way up until \hr{Ramiel's awakening}{Ramiel awakens back to his full \resphan power}. 
-After then his body recovers but \hr{Ramiel is mad after awakening}{his sanity suffers instead}.
+She becomes more and more decrepit, all the way up until \hr{Ramiel's awakening}{Ramiel awakens back to her full \resphan power}. 
+After then her body recovers but \hr{Ramiel is mad after awakening}{her sanity suffers instead}.
+
+
+
+
+
+\subsubsection{Turns evil}
+\target{Carzain turns evil}
+Carzain \hr{Carzain's idealism}{used to be idealistic}. 
+Gradually as the story goes on, Carzain becomes more and more disillusioned. 
+She sees the supposedly good Redcor around her act like total bitches, and is more impressed by the more brutal justice represented by Telcastora Ilcas. 
+Then later she grows disappointed with the Imetrium, too. And by that time, she is bitter with revenge and ambition, so she turns to evil. 
+
+Carzain and Vizicar gradually realize that on \Miith{}, everything revolves around war and conflict. It is the nature of the world, and to fight against it is doomed to failure. 
+
+Carzain encounters several different civilizations and their different moralities, and finds them all lacking\dash{}totalitarian, intolerant and contradictory. 
+She has also read snippets of \WanderersInDarknessEmph and other forbidden books, and what she has read has strengthened her growing suspicion that good is futile. 
+She is near to concluding that everyone is a hypocrite, that all morals are false and that the only truth is power. 
+When she awakens and becomes Ramiel again, she becomes completely disillusioned and turns to evil completely. 
+(Perhaps it is her already high degree of disillusionment at this point that lets her keep her sanity when confronted with the truth.) 
+
+
 
 
 
@@ -3809,9 +3820,9 @@ After then his body recovers but \hr{Ramiel is mad after awakening}{his sanity s
 
 
 \subsection{Name}
-\quo{\Shireyo} is an old-fashioned Vaimon name. 
-It is based on \quo{Heilel ben-Shachar}, which appears in the Hebrew version of the \emph{Bible}. 
-In \cite[Isaiah 14:12]{KingJamesBible} it is rendered as \quo{Lucifer, son of the morning}. 
+\emph{\Shachar} is an old-fashioned Vaimon name. 
+It is based on \emph{Heilel ben-Shachar}, which appears in the Hebrew version of the Bible. 
+In Isaiah 14:12, King James version, it is rendered as \quo{Lucifer, son of the morning}. 
 A more literal translation might be \quo{Venus, son of the morning}.
 
 
@@ -3830,21 +3841,21 @@ A more literal translation might be \quo{Venus, son of the morning}.
 
 \subsubsection{Idealism}
 \target{Carzain's idealism}
-At the beginning of the story (in \emph{\TwilightAngelRemember{}} and \emph{\CarzainWithRedcorBook{}}), Carzain is quite idealistic. He wants to be a hero, not only for the glory and the pussy, but also to save the world. He doesn't have a clear picture of what he wants to do, but he wants to do something great, something heroic. 
+At the beginning of the story (in \emph{\TwilightAngelRemember{}} and \emph{\CarzainWithRedcorBook{}}), Carzain is quite idealistic. 
+She wants to be a hero, not only for the glory and the sex, but also to save the world. 
+She doesn't have a clear picture of what she wants to do, but she wants to do something great, something heroic. 
 
 Vizicar is more cynical, since he has ruled an empire. 
 
-Gradually as the story goes on, Carzain becomes more and more disillusioned. He sees the supposedly good Redcor around him act like total bitches, and is more impressed by the more brutal justice represented by Telcastora Ilcas. Then later he grows disappointed with the Imetrium, too. And by that time, he is bitter with revenge and ambition, so he turns to evil. 
-
-Carzain and Vizicar gradually realize that on \Miith{}, everything revolves around war and conflict. It is the nature of the world, and to fight against it is doomed to failure. 
+Gradually as the story goes on, Carzain \hr{Carzain turns evil}{becomes more and more disillusioned}. 
 
 
 
 
 
 \subsubsection{Madness}
-From the beginning of \emph{\TwilightAngelRemember{}}, Carzain's sanity is already a bit low from all the dark \nieur{} magic he has studied. 
-This gives him a mild form of sociopathy and a tendency towards violence and provocation. 
+From the beginning of \emph{\TwilightAngelRemember{}}, Carzain's sanity is already a bit low from all the dark \nieur{} magic she has studied. 
+This gives her a mild form of sociopathy and a tendency towards violence and provocation. 
 
 (The above terminology is that of the RPG \emph{Call of Cthulhu}.)
 
@@ -3853,9 +3864,9 @@ This gives him a mild form of sociopathy and a tendency towards violence and pro
 
 
 \subsubsection{Misses an extended family}
-Carzain has only had his parents. 
+Carzain has only had her parents. 
 No grandparents, uncles, aunts, siblings, cousings, nothing. 
-He misses that. 
+She misses that. 
 
 
 
@@ -3864,40 +3875,40 @@ He misses that.
 \subsubsection{Sephiroth-type}
 \target{Carzain is Sephiroth}
 Carzain was a type like Sephiroth from \cite{VideoGame:FinalFantasyVII}. 
-In the beginning he was a badass hero, but idealistic.
-He fought for \quo{the side of good}, helping people against monsters and evil. 
+In the beginning she was a badass hero, but idealistic.
+She fought for \quo{the side of good}, helping people against monsters and evil. 
 
-In this time, he had many of Vizicar's memories, but not all. 
+In this time, she had many of Vizicar's memories, but not all. 
 Vizicar had some dark Mythos knowledge which they could not remember. 
-Carzain knew there were some memories he missed, and he sought for those memories. 
-But he was not so distressed. 
-He was fairly happy and optimistic (at least, by the standards of a dark sorcerer on the cruel world of \Miith). 
-He saw the search for his memories as a positive self-development project. 
-He expected they would make him happier and more complete. 
+Carzain knew there were some memories she missed, and she sought for those memories. 
+But she was not so distressed. 
+She was fairly happy and optimistic (at least, by the standards of a dark sorcerer on the cruel world of \Miith). 
+She saw the search for her memories as a positive self-development project. 
+She expected they would make her happier and more complete. 
 
-He expected the memories to be nice and pretty and bring clarity and understanding and wisdom. 
+She expected the memories to be nice and pretty and bring clarity and understanding and wisdom. 
 Because that was what they had done earlier. 
 Vizicar lived a happy life as a loved and successful \caliph. 
 He was surrounded by beauty and opulence. 
-In his youth, Carzain had been confused and feeling strange, as if something was missing inside him.
-Gradually, as Vizicar's memories returned, he came to feel more and more whole and confident and happy. 
+In her youth, Carzain had been confused and feeling strange, as if something was missing inside her.
+Gradually, as Vizicar's memories returned, she came to feel more and more whole and confident and happy. 
 There were some memories from the earlier lives that were dark and traumatic, but they were overshadowed by good memories. 
-He expected that the last missing memories would continue the same development and make him even more happy. 
+She expected that the last missing memories would continue the same development and make her even more happy. 
 
 \target{Carzain's Sephiroth epiphany}
-Then, at the end of \TwilightAngelRememberEmph, he had an epiphany. 
-A lot of dark memories came pouring back into him. 
+Then, at the end of \TwilightAngelRememberEmph, she had an epiphany. 
+A lot of dark memories came pouring back into her. 
 Not just from Vizicar's life, but from earlier lifetimes as well. 
 The memories were not clear, but a chaotic jumble of images and impressions. 
 
-The memories were not nice as he had hoped, but dark and hideous. 
+The memories were not nice as she had hoped, but dark and hideous. 
 They did not bring clarity and understanding and wisdom.
 They brought confusion and horror. 
-He remembered scattered fragments of his life as Ramiel.
-He had experienced many shaking revolutions in his life:
+She remembered scattered fragments of her life as Ramiel.
+Ramiel had experienced many shaking revolutions in his life:
 \begin{itemize}
   \item 
-    In \Merkyrah, he found out that his whole culture was based on a lie.
+    In \Merkyrah, Ramiel found out that his whole culture was based on a lie.
     He learned that his true self was a terribly dark, bloody, murderous thing.
     
     He was evil, but it felt right.
@@ -3937,29 +3948,29 @@ He had experienced many shaking revolutions in his life:
     He was cast down and lost his power. 
 \end{itemize}
 
-Carzain now felt like a victim in a cruel and evil world that was out to get him. 
-But he was also a hero. 
+Carzain now felt like a victim in a cruel and evil world that was out to get her. 
+But she was also a hero. 
 A dark hero. 
-He knew it is in his nature to conquer and destroy.
-He \quo{knew} that the morals he had followed in his last couple of lives were illusions.
-He was a much darker, bloodier character than that. 
-He had been in denial but could now no longer hide his true self. 
-He was a destroyer. 
+She knew it is in her nature to conquer and destroy.
+She \quo{knew} that the morals she had followed in her last couple of lives were illusions.
+She was a much darker, bloodier character than that. 
+She had been in denial but could now no longer hide her true self. 
+She was a destroyer. 
 
-This made him turn into a dark, ambitious anti-villain. 
-He no longer believed mortal morals had any validity. 
-He had to be an \Ubermensch and make his own morals. 
-And destroy anything that got in the way of his self-realization.
-That was what he had always done, and though it might be evil, it was right. 
-He was something greater and more important than the mortals around him. 
-He had to fight for his own self-realization and destroy his enemies.
-That was his nature. 
-His purpose. 
-And he had to be true to that. 
+This made her turn into a dark, ambitious anti-villain. 
+She no longer believed mortal morals had any validity. 
+She had to be an \Ubermensch and make her own morals. 
+And destroy anything that got in the way of her self-realization.
+That was what she had always done, and though it might be evil, it was right. 
+She was something greater and more important than the mortals around her. 
+She had to fight for her own self-realization and destroy her enemies.
+That was her nature. 
+Her purpose. 
+And she had to be true to that. 
 
-He turns evil. 
+She turns evil. 
 
-Maybe he should kill \Racel in a scene reminiscent of the one in \cite{VideoGame:FinalFantasyVII} where Sephiroth kills Aerith. 
+Maybe she should kill \Racel in a scene reminiscent of the one in \cite{VideoGame:FinalFantasyVII} where Sephiroth kills Aerith. 
 
 See also the section on \hs{Carzain's idealism}. 
 
@@ -3982,14 +3993,17 @@ Carzain and Vizicar are unsure of those myths and have a feeling that the Elder 
 
 
 \subsection{Physique}
-Carzain doesn't have the facial traits of his father nor his mother. 
-He has neither his father's big nose and curly hair and beard nor his mother's narrow, angular face. 
-He looks more like a Japanese, with rounded features and short nose. 
+\begin{description}
+  \item[Appearance:] 
+    Slightly taller than average. 
+    Slender of build but unusually muscular for a woman.
+    Long black hair. 
+\end{description}
 
 \target{Carzain wants green eyes}
 Carzain's eyes are brown (as are Nishain's). 
-He wishes they were \hr{Geican green eyes}{green, in the true Geican manner}. 
-In contrast, Vizicar's eyes are blue, which is pretty typical for his \vclan. 
+She wishes they were \hr{Geican green eyes}{green, in the true Geican manner}. 
+In contrast, Vizicar's eyes are blue, which is pretty typical for Vizicar's \vclan. 
 
 
 
@@ -3998,7 +4012,7 @@ In contrast, Vizicar's eyes are blue, which is pretty typical for his \vclan.
 \subsubsection{\Demihuman}
 \target{Carzain is a Demihuman}
 Carzain had somewhat dark skin. 
-Dark enough that some might call him a \demihuman.
+Dark enough that some might call her a \demihuman.
 
 
 
@@ -4006,7 +4020,7 @@ Dark enough that some might call him a \demihuman.
 
 \subsubsection{Stigmata}
 Carzain had some \hr{Vaimon stigmata}{Vaimon stigmata}. 
-He had some nasty sores on his body, scars of spells that had taken a great toll on him. 
+She had some nasty sores on her body, scars of spells that had taken a great toll on her. 
 
 
 
@@ -4014,11 +4028,11 @@ He had some nasty sores on his body, scars of spells that had taken a great toll
 
 \subsubsection{Strength}
 \target{Carzain's strength}
-Carzain could summon up superhuman reserves of endurance when he had to. 
-Even when wounded and tired, he could fight on and cast more magic. 
-He had strong ties to many \qliphoth, having used them for many years as Vizicar and Carzain. 
-He could call on the \qliphoth and draw strength from them. 
-He drew power from the bloody elder reaches of the Outer Darkness. 
+Carzain could summon up superhuman reserves of endurance when she had to. 
+Even when wounded and tired, she could fight on and cast more magic. 
+She had strong ties to many \qliphoth, having used them for many years as Vizicar and Carzain. 
+She could call on the \qliphoth and draw strength from them. 
+She drew power from the bloody elder reaches of the Outer Darkness. 
 
 
 
@@ -4035,8 +4049,8 @@ He drew power from the bloody elder reaches of the Outer Darkness.
 
 
 \subsubsection{Geican}
-Carzain fully considered himself a Vaimon of \ClanGeican, even before he had ever been to Geica.
-He introduced himself as such. 
+Carzain fully considered herself a Vaimon of \ClanGeican, even before she had ever been to Geica.
+She introduced herself as such. 
 
 
 
@@ -4044,13 +4058,13 @@ He introduced himself as such.
 
 \subsubsection{Reputation}
 \target{Carzain's reputation}
-During his adventuring years (before the \hs{Runger war}), Carzain had a reputation as a monster who fought monsters. 
+During her adventuring years (before the \hs{Runger war}), Carzain had a reputation as a monster who fought monsters. 
 
-Carzain was searching for his \quo{soul}.
+Carzain was searching for her \quo{soul}.
 Rumours got out about this. 
-He dropped hints here and there, but never bared his heart. 
-People knew that he was looking for something, allegedly his \quo{soul}. 
-Some said he had lost his soul (perhaps through his black magic) and wanted to find it again (perhaps having repented the black magic). 
+She dropped hints here and there, but never bared her heart. 
+People knew that she was looking for something, allegedly her \quo{soul}. 
+Some said she had lost her soul (perhaps through her black magic) and wanted to find it again (perhaps having repented the black magic). 
 
 
 
@@ -4075,7 +4089,7 @@ Some said he had lost his soul (perhaps through his black magic) and wanted to f
 
 \subsubsection{Carzain as Batman}
 Have combat scenes at \Forclin with Carzain as a Batman-type dark hero. 
-He comes out of the shadows and strikes down his prey. 
+She comes out of the shadows and strikes down her prey. 
 
 \lyricsbs{Hammerfall}{Renegade}{
   He stalks in shadow lands, soundless, with gun in hand\\
@@ -4101,9 +4115,9 @@ He comes out of the shadows and strikes down his prey.
 In all chapters where Carzain uses magic, remember to describe \hr{Itzach pain}{the pain and horror of \Itzach}, in graphic detail. 
 And with blood! 
 
-He knew a spell (\qliphah) that could stop people's hearts or otherwise kill them from the inside. 
-And he can cause big, bleeding wounds to spring open. 
-He can also rip a person's body apart, but the latter, while more effective, is much harder. 
+She knew a spell (\qliphah) that could stop people's hearts or otherwise kill them from the inside. 
+And she can cause big, bleeding wounds to spring open. 
+She can also rip a person's body apart, but the latter, while more effective, is much harder. 
 
 
 
@@ -4123,7 +4137,7 @@ Vizicar's experience helped.
 At the time of the Runger war, Carzain was very powerful. 
 Much more powerful than \hs{Archibald Curwen}. 
 
-He is a type like Kane from \cite{KarlEdwardWagner:GodsInDarkness} and \cite{KarlEdwardWagner:MidnightSun}. 
+She is a type like Kane from \cite{KarlEdwardWagner:GodsInDarkness} and \cite{KarlEdwardWagner:MidnightSun}. 
 
 
 
@@ -4131,31 +4145,17 @@ He is a type like Kane from \cite{KarlEdwardWagner:GodsInDarkness} and \cite{Kar
 
 \subsubsection{Poor healer}
 Carzain has never been a very skilled healer. 
-His mother, who is very skilled, has taught him, but he's never really gotten good at it. 
-He has a bit of a mental block against it, because he sees healing as an effeminate, wussy skill. 
-He would rather practice the kind of magic that'll let him kill people. 
+Her mother, who is very skilled, has taught her, but Carzain has never really gotten good at it. 
+She has a bit of a mental block against it, because she sees healing as an effeminate, wussy skill. 
+She would rather practice the kind of magic that'll let her kill people. 
 (\hr{Mystraacht philosophy}{\Mystraacht{} ideology}? Hell no\prikker)
-
-
-
-
-\subsubsection{Sexual skill}
-\target{Carzain PUA}
-\target{Carzain is a better lover than Vizicar}
-Carzain was a better lover and pick-up artist than Vizicar. 
-Vizicar was too used to rely on his status as Emperor. 
-
-He proved it in \hr{Carzain shows off his game}{one scene in \emph{\TheKenosis}}. 
-
-Whenever Carzain failed at something, he would often tell himself: 
-\tho{Bah. Who needs X? I get laid.}
 
 
 
 
 
 \subsubsection{Usurer}
-Carzain knew a spell to summon a \hr{usurer}\dash a \daemon that could heal and strengthen him and feed on his slain foes. 
+Carzain knew a spell to summon a \hr{usurer}\dash a \daemon that could heal and strengthen her and feed on her slain foes. 
 
 
 
@@ -4163,7 +4163,7 @@ Carzain knew a spell to summon a \hr{usurer}\dash a \daemon that could heal and 
 
 \subsubsection{Vizicar's voice}
 Recall that Carzain is a Scion, an incarnation of the \Malach{} Ramiel. 
-Occasionally, when he fights and kills, Ramiel awakens in him, and he hears the voice of \VizicarDurasRespina, the previous incarnation of Ramiel. 
+Occasionally, when she fights and kills, Ramiel awakens in her, and she hears the voice of \hr{Vizicar}{\VizicarDurasRespina}, the previous incarnation of Ramiel. 
 
 This is inspired by, and similar to, the scenes in \authorseries{Robert Jordan}{Wheel of Time} where Rand al'Thor hears the voice of Lews Therin Telamon. But where Lews Therin is mad, annoying and even dangerous, Vizicar is sane and a powerful ally. 
 
@@ -4172,10 +4172,10 @@ This is inspired by, and similar to, the scenes in \authorseries{Robert Jordan}{
 
 
 \subsubsection{\Wylde skills}
-Owing to his brief \hr{Ramiel incarnated as savage}{incarnation as a savage tribesman}, Carzain had learned how to live in the \wylde. 
-He remembered this. 
-He had important skills such as stealth and how to live off the land. 
-Compare him to Robert E. Howard's Conan.
+Owing to her brief \hr{Ramiel incarnated as savage}{incarnation as a savage tribesman}, Carzain had learned how to live in the \wylde. 
+She remembered this. 
+She had important skills such as stealth and how to live off the land. 
+Compare her to Robert E. Howard's Conan.
 
 
 
@@ -5449,7 +5449,7 @@ Most of \Velcad{} is patrilinear, but the Redcor are matrilinear, so as a Redcor
 \target{Roanne Deracille}
 %\sectioncharunspec{\Roanne{} \Delishe}{\human}{\female}
 %Female \human{}. 
-A Vaimon, previously a \Soror{} of \ClanRedcor, she has now abandoned the Redcor Church and lives in \Redglen{} as an apothecary and healer. Her husband is Nishain \Shireyo{} and together they have one child, Carzain. 
+A Vaimon, previously a \Soror{} of \ClanRedcor, she has now abandoned the Redcor Church and lives in \Redglen{} as an apothecary and healer. Her husband is Nishain \Shachar{} and together they have one child, Carzain. 
 
 
 
@@ -5484,7 +5484,7 @@ This wasn't what she wanted.
 So she gave up, left the \vclan and ran away. 
 She came to Pelidor, where \ClanRedcor does not have too much power. 
 
-And she met Nishain \Shireyo. 
+And she met Nishain \Shachar. 
 They fell in love. 
 He was smooth and a skilled pick-up guy, so he quickly got into her pants. 
 But when she got pregnant, she forced him to marry her. 
@@ -5996,8 +5996,8 @@ Kinsman of the \scarv{} of Tantor.
 
 
 
-\section{Nishain \Shireyo}
-%\sectioncharlivelong{Nishain \Shireyo}{\human}{\male}{Nishain}
+\section{Nishain \Shachar}
+%\sectioncharlivelong{Nishain \Shachar}{\human}{\male}{Nishain}
 %Male \human{} \birthtonow{Nishain}. 
 A Vaimon mage of \ClanGeican, now living in \Redglen{} in Pelidor and working as a scholar and pharmacist. His wife is \Roanne{} \Delishe{} and they have one child, Carzain. He is notable for having discovered the \Kliffah{} \Gavron{} in his youth as a scholar in Geica.
 
@@ -7116,7 +7116,8 @@ In his old age he retired from fighting duty and went to live with his nephew (s
 
 In \Redglen{} he was often called \quo{\Weylon{} Goldsmith}, even though he was not and had never been a goldsmith. 
 
-He befriended \hr{Carzain}{Carzain \Shireyo} when the latter was a young boy, and taught Carzain something of swordsmanship. 
+Weylon befriended \hr{Carzain}{Carzain \Shachar} when the latter was a young girl.
+Weylon taught Carzain something of swordsmanship. 
 
 
 
