--- a/Story/ArchonsofMith.tex
+++ b/Story/ArchonsofMith.tex
@@ -1226,7 +1226,9 @@ This has two reasons:
   \item She has suffered terrible things in her life (rape and torture) which have made her traumatized and warped, so she sees everything through her own gradually more twisted mind. 
 \end{itemize}
 
-\citeauthorbook{Duana:Chrysallis}{\Duana}{Chrysallis}{
+\lyricsbs{\Duana}{
+  \href{http://www.necrobabes.org/duana/chrysallis.html}{Chrysalis}
+}{
   In the dimension of a dream \\
   she floats through walls \\
   and empty places \\
