--- a/Story/Sentinels01Notes.tex
+++ b/Story/Sentinels01Notes.tex
@@ -274,6 +274,7 @@ One must not assume that he is harmless in his Nadir.
 
 \subsection[Tantor's journal and Eresh-Kal]{Tantor's journal and \EreshKal}
 \target{Tantor's journal}
+\target{Takestsha's Eresh-Kali magic}
 The Sentinels, who are secretly supporting Runger, have planted a diary (written by Rungeran mage \Jirad{} Tantor) among the possessions of \Ambrose{} \Onatol, a Pelidorian \ishrah{} mage. 
 
 %Tantor relates how he, together with a Rungeran expedition, finds a forgotten temple that appears to be many thousands of years old, built with odd shapes that twist the eye and seem to defy geometry and reason, and adorned with carvings of horrific monsters. 
