--- a/Story/Sentinels03Notes.tex
+++ b/Story/Sentinels03Notes.tex
@@ -8,55 +8,7 @@
 
 
 
-\subsection{Ramiel and Hayad}
-After Ramiel betrayed \Belzir, \hs{Hayad} remained his friend. 
-
-But Hayad is Sentinel-allied, and Ramiel goes to join the Cabal. 
-How does that work? 
-
-I guess Hayad will die at some point, so Ramiel won't be forced to turn on his friend. 
-
-
-
-
-
-
-
-\subsubsection{The \Bane{} Invasion}
-%After defeating \Belzir{}, Carzain fights some Rissitics and some \banes{} sent by Rissit. But eventually, it becomes apparent that the \banes{} have their own agenda. 
-
-After this, Carzain discovers that he and \Belzir{} have been manipulated by the Sentinels. He becomes angry and leaves them. 
-
-Perhaps he travels the world for a while now, fighting for whatever cause catches his fancy. Kind of like Elric of \Melnibone{} in his mercenary years. 
-
-Somehow, he meets the \banes. Perhaps he is taken prisoner by them. They show him how all morality is a lie, how everything in the world revolves around the struggle between \dragons{} and \banes. They convince him that, as a \Malach, he is created by the \banes{} and destined for greatness as a hero on their side. 
-
-At this point, Carzain has encountered several different civilizations and their different moralities, and has found them all lacking\dash{}totalitarian, intolerant and contradictory. He has also read snippets of the Book of Nom, strengthening his growing suspicion that good is futile. He is near to concluding that everyone is a hypocrite, that all morals are false and that the only truth is power. 
-After being shown the brutal truth by the \banes, he becomes completely disillusioned and turns to evil completely. (Perhaps it is his already high degree of disillusionment at this point that lets him keep his sanity when confronted with the truth.) 
-%Carzain, completely disillusioned, abandons all his former morals and turns to evil completely. 
-He abandons the name Carzain \Shireyo{} and becomes Ramiel (his \Malach{} name). 
-
-Later, he learns that the Redcor, or at least some of them, are on the Cabal's side, and that he will have to work with them. He balks until he is reassured that he will not be put under them but beside or above them. 
-
-%The Cabal betrays \Belzir{}, and it turns out that they actually serve the \banes. 
-
-%Late on in the story, Carzain and a party of other heroes go on a quest to destroy some \banes. It comes to a big boss fight, but in the end, one of the heroes betrays the party and turns on them. Carzain dies. %, and the \banes conquer \Velcad{}. 
-
-%The \banes{} conquer \Velcad{}. The Imetrians and Rissitics team up with Irokas to oppose them. I don't know what happens after that. (A nice evil ending might be to have \Tiamat{} awaken and destroy \banes{} and \dragons{} alike\prikker) 
-
-
-
-
-
-\subsubsection{Ramiel's companions}
-Maybe Ramiel has a female companion. 
-Compare to Mele from \emph{\JuukenSentaiGekiranger}, with Ramiel (of course) being Rio. 
-
-Perhaps he gathers \vorcanths{} and other creatures around him and forms his own \Rinjuuken. 
-
-
-
-
+\subsection{Ramiel}
 
 
 
@@ -644,7 +596,7 @@ They encounter vast, violent storms of ice and snow.
   But there were other things on the storm.
   
   Things funneling and raging in that vortex that you could only feel in your soul, things like pain and insanity and fear.
-  Maybe wraiths and ghosts and all those demented minds lost in storms and whirlwinds, creeping things from beyond death or nameless evils that had never been born\prikker the gathered malignancies and earthbound toxins aof that which was \human and that which was not, writhing shadows blown from pole to pole since antiquity.
+  Maybe wraiths and ghosts and all those demented minds lost in storms and whirlwinds, creeping things from beyond death or nameless evils that had never been born\prikker the gathered malignancies and earthbound toxins of that which was \human and that which was not, writhing shadows blown from pole to pole since antiquity.
   Yes, all of that and more, the collected horrors of the race and the sheared veil of the grave, coming together at once, breathing in frost and exhaling blight, a deranged elemental sentience that howled and screeched and cackled in the shrill and broken voices of a million, a million-million lost and tormented souls. 
   
   Hayes was feeling them out there on that moaning storm-wind, enclosing the SnoCat in a frozen winding sheet.
@@ -700,23 +652,6 @@ In a fight or the like, someone tells Ramiel this:
 
 
 
-\subsection{A \resvil{} who loves and hates Ramiel}
-Ramiel has an admirer and enemy. A \resvil{} who is in love with him to the point of obsession, but also hates him for his evil and his (in her eyes) betrayal of her people. Is she \Mystraacht{} or from another dynasty?
-
-Perhaps I can merge her with Shereid. 
-
-Have some scenes from her perspective, where she is disgusted with her own obsession. 
-
-In the end, he probably kills her. Perhaps she willingly lets him kill her: Stripping naked for him, kneeling down to first suck his dick, and then letting him run his blade through her breast. 
-
-Compare her to Titus Pettifer from Clive Barker's \emph{Jacqueline Ess: Her Will and Testament} (\emph{Books of Blood II} p.81-84). Or the relationship between Elric and Stormbringer in Michael Moorcock's \emph{Elric of \Melnibone} series\dash and maybe the scenes where Elric slays Zarozinia and Moonglum. 
-
-
-
-
-
-
-
 
 
 
@@ -738,7 +673,7 @@ Ramiel reaches the temple, far to the north.
 
 \subsubsection{First impressions of the temple}
 It is a \Mystraacht{} citadel, but built in \ophidian{} style, since \Mystraacht{} has conspired with the \ophidians. 
-It is not only a temple, but a cosmic gzateway to the Throne of the \Mystraacht{} Overlord, ensorcelled by \resphan{} and \ophidian{} power alike. 
+It is not only a temple, but a cosmic gateway to the Throne of the \Mystraacht{} Overlord, ensorcelled by \resphan{} and \ophidian{} power alike. 
 
 It is frightening, slime-covered, alien. 
 Compare to R'lyeh from \cite{HPLovecraft:TheCallofCthulhu} and other Cthulhu Mythos stories. 
