--- a/Story/SentinelsofMith.tex
+++ b/Story/SentinelsofMith.tex
@@ -1045,7 +1045,10 @@ Carzain meets \hs{Delph} and \hr{Tsekkect}{\Tsekkect}.
 
 They are cheerful guys. 
 They befriend Carzain and show him around the barracks, where, among other things, Delph utters his classic line: 
-\ta{Life in the army is great. We get food, money, a shot at glory, and the best pussy that money can buy. Well\prikker the best pussy that \emph{our} money can buy, anyway.} 
+\ta{%
+  Life in the army is great. 
+  We get food, money, a shot at glory, and the best pussy that money can buy. 
+  Well\prikker the best pussy that \emph{our} money can buy, anyway.} 
 
 To which Carzain replies: 
 \ta{And all they ask in return is that we fight to the death.}
@@ -1565,9 +1568,6 @@ Vizicar admits that he has been crazy and has fucked their body up.
   \changesitem{\Forklin} 
     Get rid of \Racel. 
     
-    Carzain is \hr{Carzain PUA}{a great PUA}. 
-    He \emph{does} score in \Forklin.  
-  
   \begin{comment}
   \paragraph{The \Caliph Inviolate}
   \end{comment}
