--- a/World/Azmith/Azmith.tex
+++ b/World/Azmith/Azmith.tex
@@ -1904,7 +1904,8 @@ Capital city of Runger.
 \subsection{\EreshKal}
 \target{Eresh-Kal}
 \index{\EreshKal}
-A \meccaran{} civilization that once existed in modern-day Runger. Allegedly, a lost \EreshKali{} temple lies hidden in \hs{Waythane Forest}.  
+A \meccaran{} civilization that once existed in modern-day Runger. 
+Allegedly, a lost \EreshKali{} temple lies hidden in \hs{Waythane Forest}.  
 
 
 
